# covid_wbe

./: .gitattributes  .gitignore  LICENSE  pixi.toml
data/: README.md  co-est2025-alldata.csv
data/jhu/: fips_lookup_d20260226_t204115_sha8b5688e.csv  jhu_confirmed_d20260226_t065534_sha8e7d05f.csv  jhu_deaths_d20260226_t065541_sha8e7d05f.csv
data/wbe/: cdc_data_d20260225_t222606_sha6fc34cc.csv
notebooks/: 01-Example.ipynb  01-WBEData.ipynb  02-JHUData.ipynb  03-SIRModel.ipynb  04-Selection.ipynb  05-DataModel.ipynb
src/example_project/: pyproject.toml
src/wbe/: pyproject.toml
src/wbe/wbe/: __init__.py  constants.py  inputs.py  model.py
