[project]
name = "example_project"
version = "0.1"
authors = [
    {name = "David Shipman", email= "david.shipman@monash.edu"}
]
requires-python = ">=3.10"
dependencies = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

